# trivy-html-report

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  txt.txt
src/trivy_html_report_andresdev4/: main.py  report_generator.py
test/: report.html  report.json  test_report_generator.py
trivy_html_report/: main.py
